# WikiXmlParser

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
corpus/: Alternative_medicine_Talk_Archive_20.xml
outputs/COVID-19/: 202-CoV.xml  ABNCoV2.xml  AKS-452.xml  ARCT-021.xml  ARCT-154.xml  Aarogya_Setu.xml  AbC-19_rapid_antibody_test.xml  Abdala_(vaccine).xml  AdCLD-CoV19.xml  Air_purifier.xml  Anti-mask_sentiment.xml  Antiviral_drug.xml  Attenuated_vaccine.xml  Bamlanivimab.xml  Bamlanivimab_Talk_etesevimab.xml  Bamlanivimab_etesevimab.xml  Bangavax.xml  Baricitinib.xml  Bebtelovimab.xml  BlueTrace.xml  BriLife.xml  Broad-spectrum_antiviral_drug.xml  COH04S1.xml  COVAX-19.xml  COVI-VAC_(U.S._COVID-19_vaccine).xml  COVID-19_Contact-Confirming_Application.xml  COVID-19_and_cancer.xml  COVID-19_apps.xml  COVID-19_datasets.xml  COVID-19_drug_development.xml  COVID-19_drug_repurposing_research.xml  COVID-19_in_pregnancy.xml  COVID-19_lab_leak_theory.xml  COVID-19_lockdowns.xml  COVID-19_pandemic.xml  COVID-19_pandemic_death_rates_by_country.xml  COVID-19_pandemic_in_Antarctica.xml  COVID-19_pandemic_in_Benin.xml  COVID-19_pandemic_in_Cuba.xml  COVID-19_pandemic_in_South_Africa.xml  (+263 more)
outputs/MEDRS/: Identifying_reliable_sources_(medicine).xml  Identifying_reliable_sources_(medicine)_Talk.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_1.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_10.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_11.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_12.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_13.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_14.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_15.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_16.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_17.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_18.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_19.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_2.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_20.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_21.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_22.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_23.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_24.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_25.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_26.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_27.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_28.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_29.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_3.xml  Identifying_reliable_sources_(medicine)_Talk_Archive_30.xml  (+8 more)
resources/: wikixml.dtd
src/wiki_xml_parser/: cli.py  (+2 more)
(+191 files in other folders)
