[project]
name = "wikipedia_xml_parser"
version = "0.0.5"
authors = [
  { name="Manoj Manikandan", email="manoj140805@gmail.com" },
]
description = "A package to parse Wikipedia exported XML files to a shorter XML file format"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "beautifulsoup4",
    "lxml",
    "typer",
    "typing_extensions",
    "rich",
]

[project.urls]
Homepage = "https://github.com/manojmanikandan7/WikiXmlParser"
Issues = "https://github.com/manojmanikandan7/WikiXmlParser/issues"

[project.scripts]
wiki_parse = "wikipedia_xml_parser.cli:app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "corpus/",
    "outputs/",
]



